--- a/templates/examtrend2.html
+++ b/templates/examtrend2.html
@@ -111,7 +111,7 @@ new Chart(document.getElementById('studentScoresChart'), {
 <p>No examination records found.</p>
 {% endif %}
 
-</div
+</div>
 
 
 <script src="../static/assets/libs/jquery/jquery.min.js"></script>
