--- a/templates/teachers_dashboard.html
+++ b/templates/teachers_dashboard.html
@@ -72,6 +72,20 @@
             </li>
 
             <li class="sidebar-item">
+              <a class="sidebar-link" href="{{ url_for('attendance') }}" aria-expanded="false">
+                <span class="icon"><ion-icon name="checkmark-circle-outline"></ion-icon></span>
+                <span class="hide-menu">Register In</span>
+              </a>
+            </li>
+
+            <li class="sidebar-item">
+              <a class="sidebar-link" href="{{ url_for('register_out') }}" aria-expanded="false">
+                <span class="icon"><ion-icon name="door-open-outline"></ion-icon></span>
+                <span class="hide-menu">Register Out</span>
+              </a>
+            </li>
+
+            <li class="sidebar-item">
               <a class="sidebar-link" href="{{url_for('tsetting')}}" aria-expanded="false">
                 <span class="icon"><ion-icon name="settings-outline"></ion-icon></span>
                 <span class="hide-menu">Settings</span>
