--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -209,6 +209,12 @@ button:hover {
                     <i class="fas fa-fw fa-chart-area"></i>
                     <span>Examinations</span></a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('assignments_list') }}">
+                    <i class="fas fa-book-open"></i>
+                    <span >Assignments</span>
+                </a>
+            </li>
 
             <!-- Nav Item - Tables -->
             <li class="nav-item">
